--- a/contribution/lang/ja.json
+++ b/contribution/lang/ja.json
@@ -317,7 +317,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"キャッシュがあればなんだってプリントできる！"
+ 	 	 	 	 	"キャッシュさえあるなら、何だってプリントしてあげよう！"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"I'll print whatever you want if you have the cache!"
@@ -389,7 +389,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"ようこそ。何をお預かりしますか？"
+ 	 	 	 	 	"ようこそ。何をお預かり致しましょう？"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
@@ -498,7 +498,7 @@
  	 	 	 	"eng": "initiate crypto mining"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "ビットコインを獲得できます。ただし、ハッシュプロセッサーの激しい稼働は、量子処理ユニット（通称QPU）をしばしば焼損させます。",
+ 	 	 	 	"trans": "ビットコインを獲得できます。ただし、ハッシュプロセッサーの激しい稼働により、量子処理ユニット（通称QPU）は頻繁に焼損してしまいます。",
  	 	 	 	"eng": "Engaging in crypto mining will earn you Bitcoins, however due to the intense use of the Hash Processors, the Quantum Processing Unit, otherwise known as the QPU, will often burn out."
  	 	 	}
  	 	},
@@ -528,7 +528,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"zoneName"
  	 	 	 	],
- 	 	 	 	"trans": "[AFKリソース収集] \r\n                     ${zoneName}内を探索し、ガラクタを集めて漁ります。\r\n                     運が良ければ、便利なアイテムが手に入ることも！",
+ 	 	 	 	"trans": "[AFKリソース収集] \r\n                     ${zoneName}内を探索し、アイテムを漁って回ります。\r\n                     運が良ければ、いいものが手に入るかも！",
  	 	 	 	"eng": "[AFK Resource Gather]\r\n                    Search around in ${zoneName} and scavenge for useful items.\r\n                    Who knows, maybe you'll get lucky!"
  	 	 	}
  	 	},
@@ -686,7 +686,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"segmentDisplayName"
  	 	 	 	],
- 	 	 	 	"trans": "シークレットキーのかけらはシークレットキーを奪取するために使用する。 \r\n                                 シティーセンター [ハブ]でターミナルを使用し、${segmentDisplayName}シークレットキーを獲得できる。 \r\n                                 必要な3つのキーは各ダンジョン（ノーマル、チャレンジどれでも）でそれぞれ入手可能。 \r\n                                 3つのキーを獲得すると、ターミナルを使って次のエリアへのキーをブルートフォース（クラフト）できる。",
+ 	 	 	 	"trans": "シークレットキーのかけらはシークレットキーを奪取するために使用する。 \r\n                                 シティーセンター [ハブ]でターミナルを使用し、${segmentDisplayName}シークレットキーを獲得しよう。 \r\n                                 必要な3つのキーは各ダンジョン（ノーマル、チャレンジどれでも）でそれぞれ入手可能。 \r\n                                 3つのキーを獲得すると、ターミナルを使って次のエリアへのキーをブルートフォース（クラフト）できる。",
  	 	 	 	"eng": "A secret key Fragment used to brute-force a secret key.\r\n                                Use the Terminal at city center [Hub] to brute-force a ${segmentDisplayName} secret key.\r\n                                You can acquire each of the 3 required keys in each dungeon (both normal or challenge),\r\n                                when you acquired 3 keys, you may use Terminal to brute-force (Craft) a key to the next area"
  	 	 	}
  	 	},
@@ -703,7 +703,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"typeName"
  	 	 	 	],
- 	 	 	 	"trans": "${typeName}キャッシュには、分子合成式3Dプリントに必要な情報が含まれている。 \r\n                     [セントラルハブ]で[分子合成式3Dプリンタ]で${typeName}を作成できる。 \r\n                    \r\n                     PRO TIP：プリンタから得られるアイテムのレベルはクラフトスキルに依存し、 \r\n                     そのため、つかえないものからプリントしていくと、コストがかからずクラフトスキルをあげることにも役立つ。",
+ 	 	 	 	"trans": "${typeName}キャッシュには、分子合成式3Dプリントに必要な情報が含まれている。 \r\n                     [セントラルハブ]で[分子合成式3Dプリンタ]で${typeName}を作成できる。 \r\n                    \r\n                     PRO TIP：プリンタから得られるアイテムのレベルはクラフトスキルに依存する。 \r\n                     [ゴミみたいな]ものから先にプリントしていこう。コストをかけずにクラフトスキルを上げることができる。",
  	 	 	 	"eng": "A ${typeName} cache contains information used for Molecular 3D Printing, \r\n                    You can create a ${typeName} with the [Molecular 3d Printer] at [Central Hub].\r\n                    \r\n                    Pro tip: The level of item you get from printing is determined by your Printing Rank,\r\n                    so always print the trash ones first, as they cost less and useful to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -715,13 +715,13 @@
  	 	},
  	 	"upperArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "アーマージャケット",
+ 	 	 	 	"trans": "上半身装備",
  	 	 	 	"eng": "upper armor"
  	 	 	}
  	 	},
  	 	"lowerArmor": {
  	 	 	"name": {
- 	 	 	 	"trans": "アーマーパンツ",
+ 	 	 	 	"trans": "下半身装備",
  	 	 	 	"eng": "lower armor"
  	 	 	}
  	 	},
@@ -743,7 +743,7 @@
  	 	 	 	"eng": "Pain Away"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "頭痛はありますか？ 痛みに効くのはアスピリン™！",
+ 	 	 	 	"trans": "頭が痛いって？ 痛みに効くのはアスピリン™！",
  	 	 	 	"eng": "Do you have headache? Use Pain Away™ to relieve your pain!"
  	 	 	}
  	 	},
@@ -763,7 +763,7 @@
  	 	 	 	"eng": "Degraded Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "劣化したナノメディックボット、これを使用すると、あらゆる（*条件付き）傷害が治療される！",
+ 	 	 	 	"trans": "古びたナノメディックボット、これを使うと、あらゆる（*条件付き）傷害を治療できる！",
  	 	 	 	"eng": "Old nano medic bot is used to cure any (*conditions apply) injury!"
  	 	 	}
  	 	},
@@ -773,7 +773,7 @@
  	 	 	 	"eng": "Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "使用すると、あらゆる（*条件付き）傷害が治療される！",
+ 	 	 	 	"trans": "これを注入すると、あらゆる（*条件付き）傷害を治療できる！",
  	 	 	 	"eng": "Inject it to cure any(*conditions apply) injury!"
  	 	 	}
  	 	},
@@ -783,7 +783,7 @@
  	 	 	 	"eng": "Military Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍隊で標準的に使用されている注入可能なナノマシンで、戦闘中の怪我の治療ができる。",
+ 	 	 	 	"trans": "軍隊で標準的に使用されている注入可能なナノマシン。戦闘中に怪我を治療することができる。",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They are capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -793,7 +793,7 @@
  	 	 	 	"eng": "Advanced Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "軍で使用されている注射用ナノマシン。戦闘中のケガの治療が可能。",
+ 	 	 	 	"trans": "軍で使用されている注射用ナノマシン。戦闘中に怪我を治療することができる。",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -803,7 +803,7 @@
  	 	 	 	"eng": "High Quality Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "戦闘中の怪我を治療することができる、軍で制式採用されたナノ注射器。",
+ 	 	 	 	"trans": "軍で使用されている注射用ナノマシン。戦闘中に怪我を治療することができる",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -813,7 +813,7 @@
  	 	 	 	"eng": "Rare Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "戦闘中の怪我を治療することができる、軍用機密のナノ注射器。",
+ 	 	 	 	"trans": "軍用機密の注射用ナノマシン。戦闘中に怪我を治療することができる。",
  	 	 	 	"eng": "Injectable nano machines that are standard issue for military use. They're capable of patching injuries while in combat."
  	 	 	}
  	 	},
@@ -823,7 +823,7 @@
  	 	 	 	"eng": "Pain Away Spray"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "あなたと友人は一緒に頭痛を抱えていますか？ 痛みに効くのはアスピリンスプレー™！",
+ 	 	 	 	"trans": "友達も一緒に頭が痛いって？ 痛みに効くのはアスピリンスプレー™！",
  	 	 	 	"eng": "Do you and your friends both have headaches? Use Pain Away Spray™ to relief your pain!"
  	 	 	}
  	 	},
@@ -1174,7 +1174,7 @@
  	 	 	 	"eng": "Old Pouch"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "使い古されたポーチ。 \r\n         大きな口と赤い唇を持つ奇妙なカエルの絵が描かれている。 \r\n         擦り切れた奇妙なな絵の意味はわからないが、小物を入れるのにちょうどいい。 \r\n         装備するとインベントリサイズが増える",
+ 	 	 	 	"trans": "使い古されたポーチ。 \r\n         大きな口と赤い唇を持つ奇妙なカエルの絵が描かれている。 \r\n         擦り切れた奇妙な絵の意味はわからないが、小物を入れるのにちょうどいい。 \r\n         装備するとインベントリサイズが増える",
  	 	 	 	"eng": "A forgotten ancient pouch, \r\n        there is a weird cartoon frog with big mouth and red lips drawing at the side of it,\r\n        the meaning of the ancient ominous drawing is unknown, but it is handy for keep some small object in it.\r\n        increase inventory space when equipped."
  	 	 	}
  	 	},
@@ -1324,7 +1324,7 @@
  	 	 	 	"eng": "Chat exploit transmitter [Love]"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "愛がすべて、すべては愛。人はみな愛で生きる \r\n         使うと誰もが皆を愛します \r\n         これはすべてのプレイヤーが10分後に流します",
+ 	 	 	 	"trans": "愛がすべて、すべては愛。人はみな愛で生きる \r\n         使うと誰もが皆を愛します \r\n         これはすべてのプレイヤーに10分間効果があります",
  	 	 	 	"eng": "You get some love, and you get some love! everyone gets some love!.\r\n        When used everyone loves each other\r\n        This effects all players fow 10 minutes"
  	 	 	}
  	 	},
@@ -1459,7 +1459,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"zoneName"
  	 	 	 	],
- 	 	 	 	"trans": "より多くのEXPと戦利品を得るためにダンジョンに飛び込め！ \r\n                         忘れずに回復アイテムを買うこと！ ダンジョン内では自動回復しません。",
+ 	 	 	 	"trans": "より多くのEXPと戦利品を得るためにダンジョンに飛び込もう！ \r\n                         忘れずに回復アイテムを買うこと！ ダンジョン内では戦闘後の自動回復はありませんよ。",
  	 	 	 	"eng": "Are you ready? you can test your strength out with normal dungeon, the easiest one.\r\n                        Remember to bring healing item! you won't heal after fights in dungeon"
  	 	 	}
  	 	},
@@ -1508,7 +1508,7 @@
  	 	 	"eng": "Do you think you are strong enough? take on stronger enemies in dungeon!\r\n                        remember to buy some healing item! you won't regen after battle in dungeon"
  	 	},
  	 	"enemyInRoomDoorError": {
- 	 	 	"trans": "室内に敵がいる間はドアを使うことはできません",
+ 	 	 	"trans": "室内に敵がいる間はドアを使うことはできない",
  	 	 	"eng": "You cannot use door while there is still enemy in room"
  	 	},
  	 	"enemyInCrateDoorError": {
@@ -1547,7 +1547,7 @@
  	 	 	"eng": "${segmentDisplayName} Secret Key"
  	 	},
  	 	"unlockVerb": {
- 	 	 	"trans": "奪取",
+ 	 	 	"trans": "獲得",
  	 	 	"eng": "brute-force"
  	 	},
  	 	"bruteForce": {
@@ -1634,7 +1634,7 @@
  	 	 	 	"eng": "Newbie with benefit"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "何人かの敵を倒し、あなたの冒険に必要なアイテムを入手してください",
+ 	 	 	 	"trans": "敵を何体か倒して、冒険を始めるのに必要なアイテムのセットをゲットしよう",
  	 	 	 	"eng": "Kill some enemies and get a full set of items for you to start your journey"
  	 	 	}
  	 	},
@@ -1644,7 +1644,7 @@
  	 	 	 	"eng": "Allies and Friends"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "Cyber Code Onlineへようこそ、 \r\n         オンライン上の人々と友達を作ることはあなたがco-opクエストを完了するために非常に役立ちます。 \r\n         分からないことがあれば、ぜひともオンライン上の人々に聞いてください:) \r\n         チャットにスパムした場合は、モデレータによってミュートされるということを心に留めておいてください。",
+ 	 	 	 	"trans": "Cyber Code Onlineへようこそ。 \r\n         オンライン上の人々と友達になっておけば、co-opクエストを手伝ってくれるでしょう。 \r\n         分からないことがあったら、ぜひオンライン上の人々に聞いてくださいね:) \r\n         ただし、チャットで迷惑行為をはたらいた場合は、モデレータによってミュートされることを心に留めておいてください。",
  	 	 	 	"eng": "Welcome to CyberCode Online,\r\n        making friends with people online will be very useful for you to complete co-op quests,\r\n        go ahead ask people online if you have got any questions :)\r\n        Remember, if you spam in the chat, you will be muted by moderators."
  	 	 	}
  	 	},
@@ -1654,7 +1654,7 @@
  	 	 	 	"eng": "Reach printing rank 3"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "キャッシュからプリントするアイテムのレベルは、クラフトスキルによって決まります。 \r\n         より高いレベルのアイテムをプリントするためには、クラフトスキルをレベルアップしてください。 \r\n        \r\n         [Central Hub]にある分子合成式3Dプリンタでキャッシュをプリントして、クラフトスキルをレベルアップさせてください。",
+ 	 	 	 	"trans": "キャッシュからプリントするアイテムのレベルは、クラフトスキルによって決まります。 \r\n         クラフトスキルのレベルを上げれば、より高いレベルのアイテムをプリントできるということです。 \r\n        \r\n         [セントラルハブ]にある分子合成式3Dプリンタでキャッシュをプリントして、クラフトスキルをレベルアップさせましょう。",
  	 	 	 	"eng": "The level of itemS you print with Caches are determined by your Printing Rank,\r\n        level up your Printing Rank so you can print higher level items.\r\n        \r\n        You can find Molecular 3D Printer at [Central Hub], use it to print some caches to level up your Printing Rank"
  	 	 	}
  	 	},
@@ -1875,15 +1875,15 @@
  	 	 	 	"eng": "Inventory"
  	 	 	},
  	 	 	"changePicture": {
- 	 	 	 	"trans": "カスタムプロファイル画像は寄付していただけると使用できるようになります",
+ 	 	 	 	"trans": "カスタムプロフィール画像は寄付していただくと使用できるようになります",
  	 	 	 	"eng": "Custom profile image is a donator exclusive feature"
  	 	 	},
  	 	 	"changePictureDescription": {
- 	 	 	 	"trans": "このゲームはぺイトゥウィンというわけにはいきません。有料機能でプロファイル画像とチャットフレームなどを解放できます。 \n                                                 またはゲーム内のすべての人に利益をもたらすグローバルバフ:) \n                                                 あなたが勝利のない経験がないことを願っています！",
+ 	 	 	 	"trans": "このゲームはぺイトゥウィンというわけにはいきません。有料機能でプロフィール画像とチャットフレームなどを解放できます。 \n                                                 またはゲーム内のすべての人に利益をもたらすグローバルバフ:) \n                                                 あなたが勝利のない経験がないことを願っています！",
  	 	 	 	"eng": "To provide the best No Pay-to-Win experience to you, it is necessary that all paid features are cosmetic like profile images & chat frames, \n                                                or global buffs that benefits everyone in game :)\n                                                Hope you enjoy the No Pay-to-Win experience!"
  	 	 	},
  	 	 	"confirm": {
- 	 	 	 	"trans": "さあ寄付しよう",
+ 	 	 	 	"trans": "寄付する",
  	 	 	 	"eng": "Donate now"
  	 	 	}
  	 	},
@@ -1986,7 +1986,7 @@
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
- 	 	 	 	"trans": "短いメッセージを送信しないで、代わりに長い文を試してください。",
+ 	 	 	 	"trans": "短いメッセージではなく、もう少し長い文を書いてください。",
  	 	 	 	"eng": "Please do not send short messages, try a longer sentence instead."
  	 	 	},
  	 	 	"notAtBottom": {
@@ -2059,11 +2059,11 @@
  	 	 	 	"eng": "Mute background music"
  	 	 	},
  	 	 	"restartRequired": {
- 	 	 	 	"trans": "保存後に自動で再起動します",
+ 	 	 	 	"trans": "変更を保存後、アプリは自動で再起動します",
  	 	 	 	"eng": "App will self restart after save"
  	 	 	},
  	 	 	"save": {
- 	 	 	 	"trans": "保存",
+ 	 	 	 	"trans": "変更を保存",
  	 	 	 	"eng": "save"
  	 	 	},
  	 	 	"langGithub": {
@@ -2106,13 +2106,13 @@
  	 	 	},
  	 	 	"blockGifts": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "受信ギフトを無効にします",
+ 	 	 	 	 	"trans": "ギフトの受信を無効にします",
  	 	 	 	 	"eng": "Disable receiving gifts"
  	 	 	 	}
  	 	 	},
  	 	 	"disableVictoryScreen": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "勝利画面を無効にします",
+ 	 	 	 	 	"trans": "勝利画面を表示しません",
  	 	 	 	 	"eng": "Disable Victory Screen"
  	 	 	 	}
  	 	 	},
@@ -2349,11 +2349,11 @@
  	 	 	},
  	 	 	"leaveDungeon": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "本当にこのダンジョンを離れますか？",
+ 	 	 	 	 	"trans": "本当にこのダンジョンを出ますか？",
  	 	 	 	 	"eng": "Are you sure you want to leave this dungeon?"
  	 	 	 	},
  	 	 	 	"subtitle": {
- 	 	 	 	 	"trans": "このダンジョンのインスタンスには二度と入れません。",
+ 	 	 	 	 	"trans": "今生成されているものと同一のダンジョンに入りなおすことはできません。",
  	 	 	 	 	"eng": "You will not be able to enter this dungeon instance again"
  	 	 	 	}
  	 	 	},
@@ -2389,7 +2389,7 @@
  	 	 	 	 	"eng": "Decrypting shard"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "あなたはこのページのままにして後で戻ってくるかもしれません",
+ 	 	 	 	 	"trans": "このページを開いたままちょっと放置して、後で戻ってくるといいよ",
  	 	 	 	 	"eng": "You may leave this page and come back later"
  	 	 	 	}
  	 	 	},
@@ -2479,11 +2479,11 @@
  	 	},
  	 	"noPrintableCaches": {
  	 	 	"title": {
- 	 	 	 	"trans": "装備キャッシュが見つかりません",
+ 	 	 	 	"trans": "装備品のキャッシュが見つかりません",
  	 	 	 	"eng": "Equipment Cache not found"
  	 	 	},
  	 	 	"subTitle": {
- 	 	 	 	"trans": "敵やダンジョンにあるキャッシュを集めて、新しい武器や防具をクラフトする。",
+ 	 	 	 	"trans": "倒した敵やダンジョンからキャッシュを集め、新しい武器や防具をクラフトしよう。",
  	 	 	 	"eng": "gather the caches from enemies and dungeons to print your new weapons and armor"
  	 	 	}
  	 	},
@@ -2493,11 +2493,11 @@
  	 	 	 	"eng": "balance"
  	 	 	},
  	 	 	"deposit": {
- 	 	 	 	"trans": "預金",
+ 	 	 	 	"trans": "預金する",
  	 	 	 	"eng": "Deposit"
  	 	 	},
  	 	 	"withdraw": {
- 	 	 	 	"trans": "引き出し",
+ 	 	 	 	"trans": "引き出す",
  	 	 	 	"eng": "Withdraw"
  	 	 	},
  	 	 	"upgradeSlot": {
@@ -2512,24 +2512,24 @@
  	 	 	 	"eng": "Withdraw Item"
  	 	 	},
  	 	 	"putItemToVault": {
- 	 	 	 	"trans": "商品を収納する",
+ 	 	 	 	"trans": "アイテムを収納する",
  	 	 	 	"eng": "Deposit Item"
  	 	 	},
  	 	 	"modal": {
  	 	 	 	"selectDeposit": {
- 	 	 	 	 	"trans": "いくつ収納しますか？",
+ 	 	 	 	 	"trans": "いくらお預けになりますか？",
  	 	 	 	 	"eng": "How much would you like to deposit?"
  	 	 	 	},
  	 	 	 	"selectWithdraw": {
- 	 	 	 	 	"trans": "いくつ取り出しますか？",
+ 	 	 	 	 	"trans": "いくら引き出されますか？",
  	 	 	 	 	"eng": "How much would you like to withdraw?"
  	 	 	 	},
  	 	 	 	"selectDepositItem": {
- 	 	 	 	 	"trans": "金庫室にいくつ収納しますか？",
+ 	 	 	 	 	"trans": "いくつ収納しますか？",
  	 	 	 	 	"eng": "How many would you like to put in the vault?"
  	 	 	 	},
  	 	 	 	"selectWithdrawItem": {
- 	 	 	 	 	"trans": "銀行からどのくらい引出したいですか？",
+ 	 	 	 	 	"trans": "いくつ引出したいですか？",
  	 	 	 	 	"eng": "How many would you like to withdraw from the bank?"
  	 	 	 	}
  	 	 	},
@@ -2538,7 +2538,7 @@
  	 	 	 	"eng": "You can't withdraw when you have no balance."
  	 	 	},
  	 	 	"depositDesc": {
- 	 	 	 	"trans": "ビットコインを銀行に入れる",
+ 	 	 	 	"trans": "ビットコインを銀行に預ける",
  	 	 	 	"eng": "Put Bitcoins into bank"
  	 	 	},
  	 	 	"withdrawDesc": {
@@ -2546,24 +2546,24 @@
  	 	 	 	"eng": "Take Bitcoins out of bank"
  	 	 	},
  	 	 	"putItemToVaultDesc": {
- 	 	 	 	"trans": "アイテムを金庫に入れる",
+ 	 	 	 	"trans": "アイテムを保管庫に入れる",
  	 	 	 	"eng": "Put items into your vault"
  	 	 	},
  	 	 	"takeItemFromVaultDesc": {
- 	 	 	 	"trans": "金庫からアイテムを取り出す",
+ 	 	 	 	"trans": "保管庫からアイテムを取り出す",
  	 	 	 	"eng": "Take items out from your vault"
  	 	 	},
  	 	 	"upgradeSlotDesc": {
  	 	 	 	"vars": [
  	 	 	 	 	"upgradeToSlot"
  	 	 	 	],
- 	 	 	 	"trans": "金庫に保存できるアイテムの最大量を${upgradeToSlot}に増やす",
+ 	 	 	 	"trans": "保管庫に保存できるアイテムの最大量を${upgradeToSlot}に増やす",
  	 	 	 	"eng": "Increase the max amount of items you can store in vault to ${upgradeToSlot}"
  	 	 	}
  	 	},
  	 	"generalCaptcha": {
  	 	 	"story": {
- 	 	 	 	"trans": "古い鍵付きの金庫を見つけ、そこには何か文字が書かれた付箋のようなものがありました。",
+ 	 	 	 	"trans": "古い鍵付きの金庫を見つけた。文字が書かれた付箋のようなものが張り付けてある。",
  	 	 	 	"eng": "You found an old locked safe box, there seems like a post-it with some text written on it."
  	 	 	},
  	 	 	"title": {
@@ -2628,7 +2628,7 @@
  	 	 	 	 	"eng": "Extensive repair required"
  	 	 	 	},
  	 	 	 	"instruction": {
- 	 	 	 	 	"trans": "この装備は壊れています。修理のために装備屋にお持ちください。",
+ 	 	 	 	 	"trans": "この装備は壊れています。修理するには装備屋に持っていく必要があります。",
  	 	 	 	 	"eng": "This item is broken, bring it to Weapon Smith for repair"
  	 	 	 	}
  	 	 	},
@@ -2664,7 +2664,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"lockDescription": {
- 	 	 	 	"trans": "予期しない販売またはスクラップを防ぎます",
+ 	 	 	 	"trans": "売却やスクラップされないようになります",
  	 	 	 	"eng": "Prevents accidental selling or destroying"
  	 	 	},
  	 	 	"attachableUpgradesTitle": {
@@ -2672,7 +2672,7 @@
  	 	 	 	"eng": "Attachable Upgrades"
  	 	 	},
  	 	 	"cantEquip": {
- 	 	 	 	"trans": "あなたのレベルはこのアイテムには低すぎます",
+ 	 	 	 	"trans": "レベルが不足しています",
  	 	 	 	"eng": "Your level is too low for this item"
  	 	 	},
  	 	 	"noAttachableUpgrades": {
@@ -2690,7 +2690,7 @@
  	 	 	 	"eng": "You don't have any secret keys"
  	 	 	},
  	 	 	"noKeysSubtitle": {
- 	 	 	 	"trans": "ダンジョンで入手しましょう",
+ 	 	 	 	"trans": "シークレットキーはダンジョンで入手できます",
  	 	 	 	"eng": "You can obtain secret keys from Dungeons"
  	 	 	}
  	 	},
@@ -2722,7 +2722,7 @@
  	 	 	 	 	 	"eng": "printing level ${level} equipments"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "機器の印刷はあなたの印刷ランクに基づいています。",
+ 	 	 	 	 	 	"trans": "装備のプリントはあなたのクラフトスキルレベルに基づいています。たくさんのアイテムをプリントし、スキルレベルを上げましょう",
  	 	 	 	 	 	"eng": "equipment printing is based on your printing rank, level up your printing rank by printing more items"
  	 	 	 	 	}
  	 	 	 	}
@@ -2756,7 +2756,7 @@
  	 	},
  	 	"apps": {
  	 	 	"dailyReward": {
- 	 	 	 	"trans": "デイリーリワード",
+ 	 	 	 	"trans": "デイリーログインボーナス",
  	 	 	 	"eng": "Daily Reward"
  	 	 	},
  	 	 	"coupon": {
@@ -2884,7 +2884,7 @@
  	 	 	 	"eng": "Cyberpunk Text-based MMORPG"
  	 	 	},
  	 	 	"description1": {
- 	 	 	 	"trans": "CyberCode Onlineはオンラインゲームで、ゲームデータの保存にはアカウントが必要です。",
+ 	 	 	 	"trans": "CyberCode Onlineはオンラインゲームです。ゲームデータの保存にはアカウントが必要です。",
  	 	 	 	"eng": "CyberCode Online is an online game, an account is needed to store game data."
  	 	 	},
  	 	 	"description2": {
