Correct the words to be reasonable (TH) *Fix*
There are some words that have been translated and sentence patterns are wrong from what the developer wants to convey.

--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -3994,7 +3994,7 @@
  	 	},
  	 	"m3Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "สกาแวนเกอร์ เนเมซิส",
+ 	 	 	 	"trans": "สกาแวนเจอร์ เนเมซิส",
  	 	 	 	"eng": "Scavengers Nemesis"
  	 	 	},
  	 	 	"description": {
@@ -5487,7 +5487,7 @@
  	"equipmentMarks": {
  	 	"mark1": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "ร้ายแรง",
+ 	 	 	 	"trans": "เรทเทอร์",
  	 	 	 	"eng": "Lethal"
  	 	 	},
  	 	 	"description": {
@@ -5497,7 +5497,7 @@
  	 	},
  	 	"mark2": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "ขัดขวาง",
+ 	 	 	 	"trans": "ดิสแซปเตอร์",
  	 	 	 	"eng": "Disruptor"
  	 	 	},
  	 	 	"description": {
@@ -5507,7 +5507,7 @@
  	 	},
  	 	"mark3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "การชั่วคราว",
+ 	 	 	 	"trans": "เมคชิฟ",
  	 	 	 	"eng": "Makeshift"
  	 	 	},
  	 	 	"description": {
@@ -5519,19 +5519,19 @@
  	"npcGangs": {
  	 	"gang1": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "สัตว์",
+ 	 	 	 	"trans": "แอนิมอล",
  	 	 	 	"eng": "Animals"
  	 	 	}
  	 	},
  	 	"gang2": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "เด็กชายวูดู",
+ 	 	 	 	"trans": "วูดู บอย",
  	 	 	 	"eng": "Voodoo boys"
  	 	 	}
  	 	},
  	 	"gang3": {
  	 	 	"displayName": {
- 	 	 	 	"trans": "สกาฟเจอร์ส",
+ 	 	 	 	"trans": "สกาแวนเจอร์",
  	 	 	 	"eng": "Scavengers"
  	 	 	}
  	 	}
