Correct the words to be reasonable (TH) *Fix*

--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -2141,7 +2141,7 @@
  	 	},
  	 	"deathScreen": {
  	 	 	"topTitleLeft": {
- 	 	 	 	"trans": "บาดเจ็บร้ายแรง",
+ 	 	 	 	"trans": "บาดเจ็บสาหัส",
  	 	 	 	"eng": "fatal injury"
  	 	 	},
  	 	 	"topTitleRight": {
