Correct the words to be reasonable (TH) *Fix*

--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -3094,7 +3094,7 @@
  	 	 	 	 	 	"eng": "Cyberspace hacking in progress"
  	 	 	 	 	},
  	 	 	 	 	"subtitle": {
- 	 	 	 	 	 	"trans": "เข้าร่วมบังคับกับ Netrunners คนอื่น ๆ เพื่อฝ่าฝืนป้อมปราการ SL เพื่อให้ผู้เล่นทุกคนด้วย Buff",
+ 	 	 	 	 	 	"trans": "บังคับเข้าร่วมกับ Netrunners คนอื่น ๆ เพื่อทลาย SL-Data เพื่อให้ผู้เล่นทุกคนได้ Buff",
  	 	 	 	 	 	"eng": "Join forces with other Netrunners to breach the SL-Data Fortress to grant all players with buff"
  	 	 	 	 	}
  	 	 	 	},
