Correct the words to be reasonable (TH) *Fix*

--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -2051,7 +2051,7 @@
  	 	 	 	"eng": "Language"
  	 	 	},
  	 	 	"langWarning": {
- 	 	 	 	"trans": "แพคภาษานี้เป็นโอเพนซอร์ส ข้อความอาจจะไม่ถูกแปลโดยสมบูรณ์ และสามารถมีข้อผิดพลาดได้บ้าง (รวมถึงแปลงงๆ บ้าง 555) โปรดเข้ามาแก้ไขและมีส่วนร่วมในเพจ Github ของพวกเรา",
+ 	 	 	 	"trans": "แพคภาษานี้เป็นโอเพนซอร์ส ข้อความอาจจะไม่ถูกแปลโดยสมบูรณ์ และสามารถมีข้อผิดพลาดได้บ้าง (รวมถึงแปลงงๆ บ้าง ) โปรดเข้ามาแก้ไขและมีส่วนร่วมได้ที่ Github ของพวกเรา",
  	 	 	 	"eng": "This language pack is open source and contributed by our players, the text may not be fully translated and could contain mistakes. please feel free to edit and contribute from our Github page"
  	 	 	},
  	 	 	"playBackgroundMusic": {
