Translate thai to Thai
Correctly translated according to the game context.

--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -131,7 +131,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hey kid... Come check out my goods."
+ 	 	 	 	 	"เฮ้ ไอ้หนู... มาดูสินค้าของฉันกันเถอะ"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid... Come check out my goods."
@@ -149,7 +149,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Welcome. What can I store for you?"
+ 	 	 	 	 	"ยินดีต้อนรับ ฉันจะเก็บอะไรให้คุณได้บ้าง?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
@@ -158,7 +158,7 @@
  	 	},
  	 	"equipmentUpgrade": {
  	 	 	"name": {
- 	 	 	 	"trans": "สถานีสอบ",
+ 	 	 	 	"trans": "สถานีทดสอบ",
  	 	 	 	"eng": "Calibration Station"
  	 	 	},
  	 	 	"description": {
@@ -171,7 +171,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
+ 	 	 	 	 	"ใส่ แกนการสอบเทียบอุปกรณ์ เข้าไปในเครื่อง และฉันจะช่วยคุณปรับเทียบอุปกรณ์ใดๆ ของคุณ"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Insert a Calibration Core into the machine, and I shall help you calibrate any of your equipment."
@@ -202,7 +202,7 @@
  	 	},
  	 	"recycleMachine": {
  	 	 	"name": {
- 	 	 	 	"trans": "หน่วยรีไซเคิลอัตโนมัติ",
+ 	 	 	 	"trans": "รีไซเคิลอัตโนมัติ",
  	 	 	 	"eng": "Automatic Recycler"
  	 	 	},
  	 	 	"description": {
@@ -251,7 +251,7 @@
  	 	},
  	 	"medical": {
  	 	 	"name": {
- 	 	 	 	"trans": "วิทยาศาสตร์การแพทย์",
+ 	 	 	 	"trans": "วิทยาการการแพทย์",
  	 	 	 	"eng": "medical science"
  	 	 	}
  	 	},
@@ -359,7 +359,7 @@
  	 	},
  	 	"station": {
  	 	 	"name": {
- 	 	 	 	"trans": "สถานีกลาง รถไฟไฮเปอร์",
+ 	 	 	 	"trans": "สถานีกลาง Hyper Train",
  	 	 	 	"eng": "Hyper Train Central Station"
  	 	 	},
  	 	 	"description": {
@@ -402,11 +402,11 @@
  	 	 	},
  	 	 	"toStation": {
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "กลับไปยังสถานีรถไฟไฮเปอร์",
+ 	 	 	 	 	"trans": "กลับไปยังสถานี Hyper Train",
  	 	 	 	 	"eng": "Return to Hyper Train Station"
  	 	 	 	},
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "กลับไปยังสถานีรถไฟไฮเปอร์",
+ 	 	 	 	 	"trans": "กลับไปยังสถานี Hyper Train",
  	 	 	 	 	"eng": "back to Hyper Train Station"
  	 	 	 	}
  	 	 	}
@@ -792,7 +792,7 @@
  	 	},
  	 	"aiCore": {
  	 	 	"name": {
- 	 	 	 	"trans": "แก่นของ AI",
+ 	 	 	 	"trans": "แกนของ AI",
  	 	 	 	"eng": "AI Core"
  	 	 	},
  	 	 	"description": {
@@ -864,7 +864,7 @@
  	 	},
  	 	"tertiary": {
  	 	 	"name": {
- 	 	 	 	"trans": "อาวุธทำลายร้าง",
+ 	 	 	 	"trans": "อาวุธหนัก",
  	 	 	 	"eng": "Destructive Weapon"
  	 	 	}
  	 	},
@@ -1264,11 +1264,11 @@
  	 	 	 	"eng": "Deploy farm bot"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "[AFK Exp Farm]\r\n        ปล่อย AI เพื่อลงดันเจี้ยนให้คุณได้ สิ่งนี้จะใช้แก่นของ AI โดยปกติพวกมันจะจัดการดำเนินเพียงครั้งเดียว",
+ 	 	 	 	"trans": "[AFK Exp Farm]\r\n        ปล่อย AI เพื่อลงดันเจี้ยนให้คุณได้ สิ่งนี้จะใช้แกนของ AI โดยปกติพวกมันจะจัดการดำเนินเพียงครั้งเดียว",
  	 	 	 	"eng": "[AFK Exp Farm]\r\n        Deploys an AI to dungeon for you. This will use up an AI Core, they usually only just manage the one trip."
  	 	 	},
  	 	 	"tut": {
- 	 	 	 	"trans": "คุณสามารถใช้แก่นของ AI ของคุณเพื่อเก็บเกี่ยวอัตโนมัติในขณะที่คุณไม่อยู่ได้",
+ 	 	 	 	"trans": "คุณสามารถใช้แกนของ AI ของคุณเพื่อเก็บเกี่ยวอัตโนมัติในขณะที่คุณไม่อยู่ได้",
  	 	 	 	"eng": "You can use your AI Core to Auto-Farm enemies while you AFK"
  	 	 	}
  	 	},
@@ -1520,7 +1520,7 @@
  	 	 	"eng": "Loading Dungeon..."
  	 	},
  	 	"sendInvite": {
- 	 	 	"trans": "ส่งคำเชิญให้แชท",
+ 	 	 	"trans": "ส่งคำเชิญไปที่แชท",
  	 	 	"eng": "Send Invite To Chat"
  	 	},
  	 	"leaveDungeon": {
@@ -1587,7 +1587,7 @@
  	 	"random": {
  	 	 	"clearChallengeDungeon": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "นักรบร่วมดันเจี้ยน",
+ 	 	 	 	 	"trans": "นักรบดันเจี้ยน",
  	 	 	 	 	"eng": "dungeon warrior"
  	 	 	 	}
  	 	 	},
@@ -1599,7 +1599,7 @@
  	 	 	},
  	 	 	"clearDungeon": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "คราวเลอร์ร่วมดันเจี้ยน",
+ 	 	 	 	 	"trans": "คราวเลอร์ดันเจี้ยน",
  	 	 	 	 	"eng": "dungeon crawler"
  	 	 	 	}
  	 	 	},
@@ -1687,7 +1687,7 @@
  	 	 	},
  	 	 	"social": {
  	 	 	 	"name": {
- 	 	 	 	 	"trans": "ทางสังคม",
+ 	 	 	 	 	"trans": "สังคม",
  	 	 	 	 	"eng": "social"
  	 	 	 	}
  	 	 	},
@@ -3258,7 +3258,7 @@
  	 	 	 	"eng": "Crafting"
  	 	 	},
  	 	 	"onlyShowCraftable": {
- 	 	 	 	"trans": "ซ่อนสูตรที่คุณไม่สามารถเป็นงานฝีมือ",
+ 	 	 	 	"trans": "ซ่อนไอเทมที่คุณไม่สามารถสร้างได้",
  	 	 	 	"eng": "Hide recipes that you can\\'t craft"
  	 	 	}
  	 	},
@@ -3297,12 +3297,12 @@
  	 	"equipment": {
  	 	 	"lowPrintLevelTip": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "อันดับการปริ้นต่ำ",
+ 	 	 	 	 	"trans": "ระดับการปริ้นต่ำ",
  	 	 	 	 	"eng": "Low Printing Rank"
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "เพิ่มอันดับการปริ้นของคุณเพื่อสร้างอาวุธที่ทรงพลังมากขึ้นโดยการปริ้นแคชมากขึ้น",
+ 	 	 	 	"trans": "เพิ่มระดับการปริ้นของคุณเพื่อสร้างอาวุธที่ทรงพลังมากขึ้นโดยการปริ้นแคชอุปกรณ์",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"quickSlots": {
@@ -3508,7 +3508,7 @@
  	 	},
  	 	"supportUkraine": {
  	 	 	"description": {
- 	 	 	 	"trans": "คนของยูเครนรัสเซียและโลกทั้งโลกกำลังทุกข์ทรมานเพราะความทะเยอทะยานของชายคนหนึ่ง \\ n ทำให้ความรักใช้ประโยชน์ไม่ใช่สงคราม",
+ 	 	 	 	"trans": "คนของยูเครนรัสเซียและโลกทั้งโลกกำลังทุกข์ทรมานเพราะความทะเยอทะยานของชายคนหนึ่ง \\n ทำให้ความรักใช้ประโยชน์ไม่ใช่สงคราม",
  	 	 	 	"eng": "People of Ukraine, Russia and the whole world are suffering because one man's ambition.\\n Make love exploit, not war."
  	 	 	}
  	 	},
@@ -3984,7 +3984,7 @@
  	 	},
  	 	"m2Dmg": {
  	 	 	"name": {
- 	 	 	 	"trans": "วููดู เนเมซิส",
+ 	 	 	 	"trans": "วูดู เนเมซิส",
  	 	 	 	"eng": "Voodoo Nemesis"
  	 	 	},
  	 	 	"description": {
