--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -59,7 +59,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
+ 	 	 	 	 	"สวัสดีค่ะ! บริจาคเพื่อรับ cosmetic perks และช่วยสนับสนุนเกมฟรีแบบนี้"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hi! Donate to get cosmetic perks and to help support Free-to-Win games like this one!"
@@ -149,7 +149,7 @@
  	 	 	},
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"ยินดีต้อนรับ ฉันจะเก็บอะไรให้คุณได้บ้าง?"
+ 	 	 	 	 	"ยินดีต้อนรับ. คุณต้องการฝากอะไรกับฉันไหมคะ?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Welcome. What can I store for you?"
