--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -684,7 +684,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "누군가의 기억과 경험을 지닌 조각으로, 사용하면 ${levelName} 경험치를 얻을 수 있습. \r\n         *경험치 샤드는 대화 내용이나 특정 정보가 담겨 있는 작은 데이터 카드를 말합니다. 조각 안에는 대부분 사이버코드 세계의 잡학지식이 들어 있지만, 일부 샤드에는 임무 수행에 필요한 핵심 자료가 담겨 있는 경우도 있습니다.",
+ 	 	 	 	"trans": "누군가의 기억과 경험을 지닌 조각으로, 사용하면 ${levelName} 경험치를 얻을 수 있습니다. \r\n         *경험치 샤드는 대화 내용이나 특정 정보가 담겨 있는 작은 데이터 카드를 말합니다. 조각 안에는 대부분 사이버코드 세계의 잡학지식이 들어 있지만, 일부 샤드에는 임무 수행에 필요한 핵심 자료가 담겨 있는 경우도 있습니다.",
  	 	 	 	"eng": "A shard that contains someone's memory and experience. If used you may gain ${levelName} experience from this"
  	 	 	}
  	 	},
@@ -1760,7 +1760,7 @@
  	 	 	 	"eng": "rewards"
  	 	 	},
  	 	 	"rewardAvailable": {
- 	 	 	 	"trans": "클릭하여 보상을 ",
+ 	 	 	 	"trans": "클릭하여 보상을 모으세요",
  	 	 	 	"eng": "Click to collect reward"
  	 	 	},
  	 	 	"viewDetails": {
@@ -2120,7 +2120,7 @@
  	 	 	 	"eng": "Profile"
  	 	 	},
  	 	 	"update": {
- 	 	 	 	"trans": "",
+ 	 	 	 	"trans": "업데이트",
  	 	 	 	"eng": "Updates"
  	 	 	},
  	 	 	"tutorial": {
@@ -2258,7 +2258,7 @@
  	 	 	 	}
  	 	 	},
  	 	 	"occupationPoint": {
- 	 	 	 	"trans": "샹그릴라 포인트",
+ 	 	 	 	"trans": "샹그릴라 체크포인트",
  	 	 	 	"eng": "Control over Shangri-la"
  	 	 	},
  	 	 	"occupation": {
@@ -2404,7 +2404,7 @@
  	 	 	 	 	"eng": "Decrypting shard"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "이 페이지를 떠나도 나중에  돌아올 수 있습니다",
+ 	 	 	 	 	"trans": "이 페이지를 떠나도 나중에 돌아올 수 있습니다",
  	 	 	 	 	"eng": "You may leave this page and come back later"
  	 	 	 	}
  	 	 	},
@@ -3941,7 +3941,7 @@
  	 	 	 	"eng": "BTC multiplier"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "는 비트코인 양 증가",
+ 	 	 	 	"trans": "받는 비트코인 양 증가",
  	 	 	 	"eng": "Increase Bitcoins you receive"
  	 	 	}
  	 	},
