--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -489,7 +489,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"levelName"
  	 	 	 	],
- 	 	 	 	"trans": "Un éclat contenant la mémoire et l'expérience d'un invididu, que tu peux utiliser afin d'aquérir de l'expérience de ${levelName}",
+ 	 	 	 	"trans": "Un éclat contenant la mémoire et l'expérience d'un invididu, que tu peux utiliser afin d'aquérir ${levelName} expérience",
  	 	 	 	"eng": "A shard that contains someone's memory and experience. If used you may gain ${levelName} experience from this"
  	 	 	}
  	 	},
@@ -506,7 +506,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"segmentDisplayName"
  	 	 	 	],
- 	 	 	 	"trans": "Fragment Secret de clé. Utilisé pour cracker une clé.\r\n                                Utilise le Terminal situé dans le Centre-Ville [Hub] pour cracker une clé secrète de ${segmentDisplayName}.\r\n                                Tu peux acquérir chacun des 3 fragments nécessaires dans chaque donjon (que ce soit en difficulté normale ou challenge),\r\n                                lorsque tu a acquis les 3 clés, tu peux utiliser le Terminal pour cracker (fabriquer) la clé pour accéder à la zone suivante",
+ 	 	 	 	"trans": "Fragment secret de clé utilisé pour cracker une clé secrète.\r\n                                Utilise le Terminal situé dans le Centre-Ville [Hub] pour cracker une clé secrète de ${segmentDisplayName}.\r\n                                Tu peux acquérir chacun des 3 fragments nécessaires dans chaque donjon (que ce soit en difficulté normale ou challenge),\r\n                                lorsque tu a acquis les 3 clés, tu peux utiliser le Terminal pour cracker (fabriquer) la clé pour accéder à la zone suivante",
  	 	 	 	"eng": "A secret key Fragment used to brute-force a secret key.\r\n                                Use the Terminal at city center [Hub] to brute-force a ${segmentDisplayName} secret key.\r\n                                You can acquire each of the 3 required keys in each dungeon (both normal or challenge),\r\n                                when you acquired 3 keys, you may use Terminal to brute-force (Craft) a key to the next area"
  	 	 	}
  	 	},
@@ -1160,7 +1160,7 @@
  	 	},
  	 	"hackTool": {
  	 	 	"name": {
- 	 	 	 	"trans": "Éclat de violation du protocole",
+ 	 	 	 	"trans": "[Gang] Éclat de violation du protocole",
  	 	 	 	"eng": "Protocol Breach Shard"
  	 	 	},
  	 	 	"description": {
@@ -1252,7 +1252,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Calibrage AI Shard (${percent}%)",
+ 	 	 	 	"trans": "Éclat d'IA de calibrage (${percent}%)",
  	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
  	 	 	}
  	 	}
