--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -2030,7 +2030,7 @@
  	 	 	 	 	 	"eng": "Delete Account"
  	 	 	 	 	},
  	 	 	 	 	"placeholder": {
- 	 	 	 	 	 	"trans": "输入要删除的字符名称",
+ 	 	 	 	 	 	"trans": "输入要删除的角色名称",
  	 	 	 	 	 	"eng": "Enter your character name to delete"
  	 	 	 	 	}
  	 	 	 	}
@@ -5568,7 +5568,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "${enemyName}攻击您，收到了${value}伤害",
+ 	 	 	 	"trans": "${enemyName}攻击您，受到了${value}伤害",
  	 	 	 	"eng": "${enemyName} attacked you, received ${value} damage"
  	 	 	},
  	 	 	"playerAttack": {
@@ -5576,7 +5576,7 @@
  	 	 	 	 	"enemyName",
  	 	 	 	 	"value"
  	 	 	 	],
- 	 	 	 	"trans": "您攻击${enemyName}，交易${value}损坏",
+ 	 	 	 	"trans": "您攻击${enemyName}，造成${value}伤害",
  	 	 	 	"eng": "You attacked ${enemyName}, dealing ${value} damage"
  	 	 	}
  	 	}
