--- a/contribution/lang/zh-CN.json
+++ b/contribution/lang/zh-CN.json
@@ -3211,7 +3211,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"playerCount"
  	 	 	 	],
- 	 	 	 	"trans": "${playerCount}播放器连接",
+ 	 	 	 	"trans": "${playerCount}玩家连接",
  	 	 	 	"eng": "${playerCount} player(s) connected"
  	 	 	}
  	 	},
@@ -4458,7 +4458,7 @@
  	 	},
  	 	"block": {
  	 	 	"title": {
- 	 	 	 	"trans": "你确定要阻止这个播放器吗？",
+ 	 	 	 	"trans": "你确定要屏蔽这个玩家吗？",
  	 	 	 	"eng": "Are you sure you want to block this player?"
  	 	 	}
  	 	}
